<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_master</name>
  <version>0.0.0</version>
  <description>robot master node that control all command of robot based on yaml files</description>
  <maintainer email="tnt.kosen2423@gmail.com">tonto2423</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <!-- <depend>pure_pursuit</depend> -->
  <!-- <depend>mecha_control</depend> -->
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <!-- <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <depend>action_msgs</depend>
  <member_of_group>rosidl_interface_packages</member_of_group> -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
